--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -42,7 +42,7 @@
         </section>
       </div>
       <div class="small-text">
-        <span class="p-mana"> MANA TEAM </span>
+        <span class="p-mana" style="font-family: Just Another Hand; font-size: 10rem;"> MANA TEAM </span>
         <br />
         <p class="text-about">
           Our website excels in creating stunning, highly functional sites,
@@ -71,28 +71,28 @@
           </div>
           <div class="social-links">
             <a
-              href="https://www.linkedin.com/in/yourprofile"
+              href="https://www.linkedin.com/"
               target="_blank"
               aria-label="LinkedIn"
             >
               <i class="fab fa-linkedin"></i>
             </a>
             <a
-              href="https://github.com/yourusername"
+              href="https://github.com/neginsadani/MANA-project"
               target="_blank"
               aria-label="GitHub"
             >
               <i class="fab fa-github"></i>
             </a>
             <a
-              href="https://twitter.com/yourusername"
+              href="https://twitter.com"
               target="_blank"
               aria-label="Twitter"
             >
               <i class="fab fa-twitter"></i>
             </a>
             <a
-              href="https://www.instagram.com/yourusername"
+              href="https://www.instagram"
               target="_blank"
               aria-label="Instagram"
             >
