--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <i class="fab fa-twitter"></i>
             </a>
             <a
-              href="https://www.instagram"
+              href="https://www.instagram.com"
               target="_blank"
               aria-label="Instagram"
             >
