--- a/html/negin.html
+++ b/html/negin.html
@@ -59,9 +59,8 @@
           <div class="skils-item">
             <h3> programming languages </h3>
             <ul>
-              <li>C#</li>
-              <li>JavaScript</li>
-              <li>Java</li>
+              <li> C++ </li>
+              <li> python </li>
             </ul>
           </div>
           <div class="skils-item">
@@ -75,8 +74,7 @@
           <h3> Networking </h3>
           <ul>
             <li> CCNA - Switching & Routing </li>
-            <li> Security Networking </li>
-               <li> Network Security monitoring </li>
+              <li> Network + </li>
           </ul>
         </div>
         <div class="skils-item">
