--- a/html/negin.html
+++ b/html/negin.html
@@ -66,7 +66,7 @@
           <div class="skils-item">
             <h3> Conception </h3>
             <ul>
-              <li>Adobe pothoshap</li>
+              <li>Adobe Photoshop</li>
               <li>Adobe Anime studio</li>
             </ul>
         </div>
